--- a/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
+++ b/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
@@ -1,1 +1,30 @@
-hello world
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>abapOpenFix</title>
+    <style>
+    body {
+      font-family: sans-serif;
+    }
+    a, a:visited {
+      color:           #4078c0;
+      text-decoration: none;
+    }
+    a:hover, a:active {
+      cursor:          pointer;
+      text-decoration: underline;
+    }
+    </style>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.23.1/babel.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-router/3.0.2/ReactRouter.js"></script>    
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/history/2.1.2/History.min.js"></script>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="text/babel" src="/sap/zabapopenfix/static/script.js"></script>
+  </body>
+</html>
