--- a/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
+++ b/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
@@ -15,6 +15,9 @@
       cursor:          pointer;
       text-decoration: underline;
     }
+    table, th, td {
+      border: 1px solid black;
+    }
     </style>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.min.js"></script>
