--- a/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
+++ b/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
@@ -37,6 +37,13 @@
     .CodeMirror-merge-l-chunk {
       background: #303030;
     }
+    .right {
+      text-align: right;
+    }
+    h1 {
+      margin: 0px;
+      padding: 0px;
+    }
     </style>
   </head>
   <body>
