navigation and not found

--- a/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
+++ b/src/service/06f4ca3b58441ed6bfb7088cd409dda7.smim.index.html
@@ -40,6 +40,15 @@
     .right {
       text-align: right;
     }
+    .errors {
+      color: red;
+      font-weight: bold;
+    }
+    .topright{
+      position:absolute;
+      top:0;
+      right:0;
+    }
     h1 {
       margin: 0px;
       padding: 0px;
